featured-title replaced

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="left">
             <div class="inner transition2">
                 <p class="subtitle">Featured Project</p>
-                <a href="#" class="featured-title">DesignCourse.com ReDesign</a>
+                <a href="#" class="featured-title">Figma Design Turning To Life</a>
                 <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, cum!</p>
             </div>
         </div>
