featured-desc updated

--- a/index.html
+++ b/index.html
@@ -77,11 +77,15 @@
         <div class="left">
             <div class="inner transition2">
                 <p class="subtitle">Featured Project</p>
-                <a href="#" class="featured-title">Figma Design Turning To Life</a>
-                <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, cum!</p>
+                <a href="https://jtzuya.github.io/figma-unresponsive-web/" class="featured-title">Figma Design Turning
+                    To Life</a>
+                <p class="featured-desc">I've created this very first design and develop it all by myself using all the
+                    knowledge I got so far with HTML5 and CSS3.</p>
             </div>
         </div>
-        <img src="image/chatApp.svg" alt="Featured Project" class="right transition2">
+        <a href="https://jtzuya.github.io/figma-unresponsive-web/">
+            <img src="image/chatApp.svg" alt="Featured Project" class="right transition2">
+        </a>
     </section>
 
     <section class="skills">
