--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
 
     <div class="nav-container">
         <header>
-            <a href="#" class="logo">Jake Lue</a>
+            <a href="#" class="logo">Jake Luena</a>
 
             <nav>
                 <ul>
