--- a/index.html
+++ b/index.html
@@ -157,59 +157,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"
         integrity="sha512-Q+G390ZU2qKo+e4q+kVcJknwfGjKJOdyu5mVMcR95NqL6XaF4lY4nsSvIVB3NDP54ACsS9rqhE1DVqgpApl//Q=="
         crossorigin="anonymous"></script>
-
-    <script>
-        gsap.registerPlugin(ScrollTrigger);
-        var tl = gsap.timeline();
-
-        tl.from('.content', {
-            y: '-30%',
-            opacity: 0,
-            duration: 2,
-            ease: Power4.easeOut
-        })
-        tl.from('.stagger1', {
-            opacity: 0,
-            y: -50,
-            stagger: .3,
-            ease: Power4.easeOut,
-            duration: 2
-        }, "-=1.5")
-        tl.from('.hero-design', {
-            opacity: 0,
-            y: 50,
-            ease: Power4.easeOut,
-            duration: 1
-        }, "-=2")
-        gsap.from('.square-anim', {
-            stagger: .2,
-            scale: 0.1,
-            duration: 1,
-            ease: Back.easeOut.config(1.7)
-        })
-
-        gsap.from('.transition2', {
-            scrollTrigger: {
-                trigger: '.transition2',
-                start: 'top bottom'
-            },
-            y: 50,
-            opacity: 0,
-            duration: 1.2,
-            stagger: .3
-        })
-
-        gsap.from('.transition3', {
-            scrollTrigger: {
-                trigger: '.transition3',
-                start: 'top bottom'
-            },
-            y: 50,
-            opacity: 0,
-            duration: 1.2,
-            stagger: .6
-        })
-    </script>
+    <script src="main.js"></script>
 
 </body>
 
