--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </header>
         <div class="social-media">
             <ul>
-                <li><a href="#"><img src="image/github.svg"></a></li>
-                <li><a href="#"><img src="image/dribbble-logo.svg"></a></li>
+                <li><a href="https://github.com/Jtzuya"><img src="image/github.svg"></a></li>
+                <li><a href="https://dribbble.com/Jtzuya"><img src="image/dribbble-logo.svg"></a></li>
                 <li><a href="#"><img src="image/linkedin.svg"></a></li>
             </ul>
         </div>
