--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <a href="https://jtzuya.github.io/figma-unresponsive-web/" class="featured-title">Figma Design Turning
                     To Life</a>
                 <p class="featured-desc">I've created this very first design and develop it all by myself using all the
-                    knowledge I got so far with HTML5 and CSS3.</p>
+                    knowledge I've got so far with HTML5 and CSS3.</p>
             </div>
         </div>
         <a href="https://jtzuya.github.io/figma-unresponsive-web/">
