added html attribute target

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </header>
         <div class="social-media">
             <ul>
-                <li><a href="https://github.com/Jtzuya"><img src="image/github.svg"></a></li>
-                <li><a href="https://dribbble.com/Jtzuya"><img src="image/dribbble-logo.svg"></a></li>
+                <li><a href="https://github.com/Jtzuya" target="blank"><img src="image/github.svg"></a></li>
+                <li><a href="https://dribbble.com/Jtzuya" target="blank"><img src="image/dribbble-logo.svg"></a></li>
                 <li><a href="#"><img src="image/linkedin.svg"></a></li>
             </ul>
         </div>
@@ -77,13 +77,14 @@
         <div class="left">
             <div class="inner transition2">
                 <p class="subtitle">Featured Project</p>
-                <a href="https://jtzuya.github.io/figma-unresponsive-web/" class="featured-title">Figma Design Turning
+                <a href="https://jtzuya.github.io/figma-unresponsive-web/" class="featured-title" target="blank">Figma
+                    Design Turning
                     To Life</a>
                 <p class="featured-desc">I've created this very first design and develop it all by myself using all the
                     knowledge I've got so far with HTML5 and CSS3.</p>
             </div>
         </div>
-        <a href="https://jtzuya.github.io/figma-unresponsive-web/">
+        <a href="https://jtzuya.github.io/figma-unresponsive-web/" target="blank">
             <img src="image/chatApp.svg" alt="Featured Project" class="right transition2">
         </a>
     </section>
